Bug 133527 - Beta 7.0.0.0 crashes upon dragging a document into its window
Summary: Beta 7.0.0.0 crashes upon dragging a document into its window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: highest critical
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
: 133532 133631 133772 133986 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-30 19:03 UTC by xordevoreaux
Modified: 2020-06-16 11:03 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xordevoreaux 2020-05-30 19:03:08 UTC
Description:
I dragged an ODF and ODT to Beta 7's window. Beta 7 crashed hard with no message.

Steps to Reproduce:
1. Open LO Beta 7
2. From a Windows Explorer window, drag any LO file onto the LO window

Actual Results:
LO crashes immediately with no message as to why

Expected Results:
LO should not crash.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.beta1 (x64)
Build ID: 94f789cbb33335b4a511c319542c7bdc31ff3b3c
CPU threads: 8; OS: Windows 10.0 Build 19635; UI render: Skia/Raster; 
VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 Telesto 2020-05-30 19:25:16 UTC
Confirm
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 83c4f86f22dc37269ac6a038fe7de053c42aad6e
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-US
Calc: CL
Comment 2 Telesto 2020-05-30 19:39:21 UTC
Not in
Version: 7.0.0.0.alpha1+ (x64)
Build ID: b3c8859cd20bd02adea5d2b026001f67feacc754
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Bibisect repro is lagging behind.. issue is introduced in the last 6 days
Comment 3 Telesto 2020-05-30 21:38:00 UTC
*** Bug 133532 has been marked as a duplicate of this bug. ***
Comment 4 Buovjaga 2020-05-31 13:49:01 UTC
Also on Linux: kf5 hangs, gtk3 and gen crash.
Bibisected on Linux with 6.5 repo to https://git.libreoffice.org/core/+/f2561331534459f8aebc57e8615fa5f626521bcb%5E%21
Prevent deadlock accessing clipboard

Adding Cc: to Mike Kaganski

Jan-Marek also bibisected to the same.
Comment 5 Mike Kaganski 2020-05-31 15:37:31 UTC
https://gerrit.libreoffice.org/c/core/+/95231
Comment 6 Buovjaga 2020-05-31 16:52:41 UTC
(In reply to Buovjaga from comment #4)
> Also on Linux: kf5 hangs, gtk3 and gen crash.
> Bibisected on Linux with 6.5 repo to
> https://git.libreoffice.org/core/+/
> f2561331534459f8aebc57e8615fa5f626521bcb%5E%21
> Prevent deadlock accessing clipboard
> 
> Adding Cc: to Mike Kaganski
> 
> Jan-Marek also bibisected to the same.

Whoops, it looks like the fix for bug 133365 already fixed the Linux issue (I confirm after fresh build)! But I guess Mike could repro the Win issue as he created a patch.
Comment 7 Commit Notification 2020-06-01 05:39:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/54669d9fcc9d51c561108b512717698cff9320af

tdf#133527: the code may be called without solar mutex guard

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2020-06-01 07:17:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/832dda315e83c8ef5f2ecacdecda3e97f6013d8e

tdf#133527: the code may be called without solar mutex guard

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2020-06-07 19:49:18 UTC
*** Bug 133772 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2020-06-09 12:02:07 UTC
*** Bug 133631 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2020-06-16 10:54:48 UTC
*** Bug 133986 has been marked as a duplicate of this bug. ***
Comment 12 thatho 2020-06-16 11:02:46 UTC
Confirming that the bug has been sqissue is not present in
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a35c18aeff3b1d8f270db7e094850fb8ba1ab84a
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: en-US
Calc: CL
Comment 13 thatho 2020-06-16 11:03:18 UTC
Confirming that the bug has been squashed and the issue is not present in
Version: 7.1.0.0.alpha0+ (x64)
Build ID: a35c18aeff3b1d8f270db7e094850fb8ba1ab84a
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: en-US
Calc: CL