tdf#133527: the code may be called without solar mutex guard

... so make sure to get one before using releaser

Change-Id: Ifd746e4bb4bdb0110d25fe1ff71fa3dfef67c4da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95231
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>